<resources>
    <string name="app_name">SnazMed</string>
    <string name="buddy_group">Other Groups(s)</string>
    <string name="alphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="emailId">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_.</string>
    <string name="numbersvalue">012345678-9</string>
    <string name="alpha">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_ ./:</string>
    <string name="alphaNumericandspace">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_ .:/</string>
    <string name="numbers">0123456789+</string>
    <string name="numeric">0123456789</string>
    <string name="my_group">My Group(s)</string>
    <string name="my_contact">My Contact(s)</string>
    <string name="contacts">Contacts</string>
    <string name="sec_contacts">SecondContacts</string>
    <string name="conversations">Conversations</string>
    <string name="view_profile">View Profile</string>
    <string name="utilities">Utilities</string>
    <string name="files">Files</string>
    <string name="me">Me</string>
    <string name="orders">Orders</string>
    <string name="apps">My apps</string>
    <string name="avatar">Answering Machine</string>
    <string name="settings">Settings</string>
    <string name="kindly_select_any_buddies">Kindly select any buddies</string>
    <string name="confirm_stop_recording">Confirm Stop Recording</string>
    <string name="quickaction">Quick Action</string>
    <string name="forms">Forms</string>
    <string name="feedback">FeedBack</string>
    <string name="call_history">Call History</string>
    <string name="screen_sharing">Screen Sharing</string>
    <string name="do_you_want_to_leave_before_sharing_the_note">Do you want to leave before sharing the note?</string>
    <string name="do_you_want_to_go_back_before_sending">Do you want to go back before sending?</string>
    <string name="configs">Configurations</string>
    <string name="keys">Keys</string>
    <string name="locservices">Location Services</string>
    <string name="busyresponse">Busy Responses</string>
    <string name="share_settings">Share Settings</string>
    <string name="current_loc">Current Location</string>
    <string name="autoplay">Autoplay</string>
    <string name="change_password">Change Password</string>
    <string name="change_image">Change image</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="remember_sign_in_details">Remember Password</string>
    <string name="auto_sign_in">Auto Login</string>
    <string name="date_format">Date Format</string>
    <string name="show_my_location">Show My Location</string>
    <string name="share_tone">Share tone</string>
    <string name="auto_accept_call">Auto Accept Call</string>
    <string name="configure_stores">Configure Stores</string>
    <string name="change_language">Select Language</string>
    <string name="select_langugage">English</string>
    <string name="english_langugage">English</string>
    <string name="tamil_langugage">Tamil</string>
    <string name="chinese_langugage">Chinese</string>
    <string name="configure_for">Configure for</string>
    <string name="when_buddy_is_at_location">When Buddy is at location</string>
    <string name="manual">Manual</string>
    <string name="clear_location">Clear Location</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="when_busy_respond_with">When busy Respond with</string>
    <string name="redirect">Redirect</string>
    <string name="forward">Forward</string>
    <string name="note_path">Note Path</string>
    <string name="response_type">Response type</string>
    <string name="cancel">Cancel</string>
    <string name="enable_disable_services">Enable/Disable Services</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="audio_broadcast_bc">Audio Broadcast</string>
    <string name="video_broadcast_bc">Video Broadcast</string>
    <string name="audio_unicast">Audio Unicast</string>
    <string name="video_unicast">Video Unicast</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connecting</string>
    <string name="calling">Calling</string>
    <string name="snooze">Snooze</string>
    <string name="need_call_hangup">Are you sure, want to hangup call?</string>
    <string name="ringing">Ringing</string>
    <string name="hangup">Hangup</string>
    <string name="auconnected">Connected</string>
    <string name="audiocall_connected_">Audiocall Connected  </string>
    <string name="connected_buddies1">Connected  </string>
    <string name="connected_buddies">Connected Buddies :  </string>
    <string name="screen_share">Screen Sharing</string>
    <string name="call_types1">Call Type: .....</string>
    <string name="call_contents1">Content:</string>
    <string name="durations">Duration: .....</string>
    <string name="previews">Recording:</string>
    <string name="about">About</string>
    <string name="gallery">Open Gallery</string>
    <string name="photo">photo</string>
    <string name="photo_avatar">Photo</string>
    <string name="start_camera">Start Camera</string>
    <string name="text_message">Text Message</string>
    <string name="photo_message">Photo Message</string>
    <string name="audio_message">Audio Message</string>
    <string name="video_message">Video Message</string>
    <string name="sketch_message">Sketch Message</string>
    <string name="audio">audio</string>
    <string name="audio_avatar">Audio</string>
    <string name="video">video</string>
    <string name="video_avatar">Video</string>
    <string name="sketch">sketch</string>
    <string name="text">text</string>
    <string name="text_avatar">Text</string>
    <string name="document">document</string>
    <string name="text_share"> shared Text file with you</string>
    <string name="audio_share"> shared audio file with you</string>
    <string name="video_share"> shared video file with you</string>
    <string name="sketch_share"> shared sketch file with you</string>
    <string name="document_share"> shared document file with you</string>
    <string name="image_share"> shared image file with you</string>
    <string name="brush_size">Brush size</string>
    <string name="choose_the_brush_size">Choose the brush size</string>
    <string name="record_audio">Record Audio</string>
    <string name="choose_existing_audio1">Choose the existing audio</string>
    <string name="audio_note_picker_screen1">Audio note picker screen</string>
    <string name="record_video">Record video</string>
    <string name="choose_existing_video1">Choose from library</string>
    <string name="video_note_picker_screen1">Video note picker screen</string>
    <string name="add_photo">Add photo !</string>
    <string name="take_photo">Take photo</string>
    <string name="save_handsketch">Save Handsketch</string>
    <string name="save_handsketches1">Save Handsketch?</string>
    <string name="fontfamily">fonts/ARIAL.TTF</string>
    <string name="fontfamilybold">fonts/ARIALBD.TTF</string>
    <string name="inbox">Inbox</string>
    <string name="conference_call">Conference call</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="withdraw">Withdraw</string>
    <string name="all_files">All Files</string>
    <string name="please_login_to_the_system">please login to the system</string>
    <string name="access">Access</string>
    <string name="chat">Chat</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="old_password_hint">Enter Old Password</string>
    <string name="new_password_hint">Enter New Password</string>
    <string name="confirm_password_hint">Enter Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="logout_confirmation">Logout confirmation</string>
    <string name="are_you_sure_you_want_to_signout">Are you sure,You want to Logout?</string>
    <string name="ok">Ok</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="share_tone_settings">Alert can be set for incoming notes</string>
    <string name="enable_share_tone_">Enable Share Tone </string>
    <string name="play_preview">Play Preview</string>
    <string name="store_1">Store 1</string>
    <string name="store_1_front">Front : </string>
    <string name="store_1_side">Side : </string>
    <string name="store_1_back">Back : </string>
    <string name="store_2">Store 2</string>
    <string name="store_2_cashier">Cashier : </string>
    <string name="please_select">-Please Select-</string>
    <string name="please_select_without_hyphen">Please Select</string>
    <string name="warning">Warning !</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete </string>
    <string name="yes">Yes</string>
    <string name="select_buddy">Select Buddy</string>
    <string name="app_background">Are you sure, You want to Send this application to Background ? </string>
    <string name="autoplay_dialog">Auto play will begin in 5 seconds. Click on Stop to prevent automatic playback now.</string>
    <string name="play">Play </string>
    <string name="add_people">Add People</string>
    <string name="reminder_hangup">You have a reminder.Do you wish to Hangup Call ?</string>
    <string name="near_loc_buddies">Nearest Location Buddies</string>
    <string name="no_near_contacts">No Nearest Contacts</string>
    <string name="video_bc_people">List of buddies</string>
    <string name="out_audio_uc">Outgoing Audio Unicast</string>
    <string name="in_audio_uc">Incoming Audio Unicast</string>
    <string name="out_audio_bc">Outgoing Audio Broadcast</string>
    <string name="in_audio_bc">Incoming Audio Broadcast</string>
    <string name="no_result_found">No Result Found</string>
    <string name="add_contact">Add Contacts</string>
    <string name="callhistory">Call History</string>
    <string name="fb">FB</string>
    <string name="signout">Sign out</string>
    <string name="others">Others</string>
    <string name="no_access">No Access</string>
    <string name="delete">Delete</string>
    <string name="network_settings">Network Settings</string>
    <string name="change_settings">Change Settings</string>
    <string name="access_">Access:</string>
    <string name="sync_">Sync:</string>
    <string name="always_sync">Always Sync</string>
    <string name="query_">Query</string>
    <string name="sync_based_on_query">sync based on query</string>
    <string name="user_name_asr">User Name</string>
    <string name="april_22_2014">April 22 2014</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="number_of_quantity">Number of quantity</string>
    <string name="name_organization">Name(or)Organization</string>
    <string name="price">Price</string>
    <string name="add_your_product_images">Add your product images</string>
    <string name="add_more_information_about_your_product">Add more informations about your product</string>
    <string name="address">Address</string>
    <string name="countrytv">Country</string>
    <string name="state">State</string>
    <string name="city_district">City/District</string>
    <string name="pin">PIN</string>
    <string name="email">E-Mail</string>
    <string name="code">Code</string>
    <string name="number">Number</string>
    <string name="show_Result">Show Result(s)</string>
    <string name="post">Post</string>
    <string name="contact_number_small">Contact Number</string>
    <string name="save_ut">  Save  </string>
</resources>