<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:orientation="vertical"
    tools:context="com.example.screenshot.MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#13ABE1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/april_22_2014"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@+id/Delete"
            android:text="@string/save_ut"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/delete"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/BuyerNameTV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyer_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/BuyerNameET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_organization"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ProductName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ProductNameET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/QuantityText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/QuantityET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_quantity"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/productPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_product_images"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:src="@drawable/ic_action_camera_low" />

            <ImageView
                android:id="@+id/photo_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/close"
                android:visibility="gone" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_more_information_about_your_product"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/mic"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <ImageView
                android:id="@+id/mic_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/close"
                android:visibility="gone" >
            </ImageView>

            <ImageView
                android:id="@+id/video"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <ImageView
                android:id="@+id/video_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/close"
                android:visibility="gone" >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gps_icon" />

            <EditText
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/countrytv"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/countrytv"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/State"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_district"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/District"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_district"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number_small"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/code"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/codaNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#13ABE1" >

        <TextView
            android:id="@+id/showResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/show_Result"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resultCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/showResult"
            android:background="@drawable/patch"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_psthide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/post"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>