<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/greybg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <CheckBox
            android:id="@+id/select_checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_weight="1.20"
            android:button="@drawable/checkbok_selector"
            android:focusable="false" />

        <TextView
            android:id="@+id/myself"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".90"
            android:text="@string/user_name_asr"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/permission"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".90"
            android:text="@string/change_settings"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4" >

        <TextView
            android:id="@+id/title_access"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:text="@string/access_"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_access"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".95"
            android:text="@string/no_access"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/title_sync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:text="@string/sync_"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_sync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".90"
            android:duplicateParentState="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/always_sync"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2" >

        <TextView
            android:id="@+id/title_query"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.65"
            android:text="@string/query_"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_quey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".35"
            android:text="@string/sync_based_on_query"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />
    </LinearLayout>

</LinearLayout>
